--- a/styles/partials/global.css
+++ b/styles/partials/global.css
@@ -1,5 +1,13 @@
 @import 'variables.css';
 
+html {
+	box-sizing: border-box;
+}
+
+*, *:before, *:after {
+	box-sizing: inherit;
+}
+
 body {
 	margin: 0;
 	color: var(--text-color);
